--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,23 @@
 hr {
-  margin-bottom: 35px; margin-top 25px;
+  margin-bottom: 35px; 
+  margin-top 25px;
 }
 
 li {
-  color: blue
+  color: blue;
 }
 
 code {
-  "Trebuchet MS", Helvetica, sans-serif
+  "Trebuchet MS", Helvetica, sans-serif;
 }
 
+.caption {
+   width: 50%; 
+  font-style: italic;
+}
+
+#most_important {
+  background-color: lightgray;
+  width: 200 px;
+  height: 100 px;
+}
