--- a/Database_Project/style.css
+++ b/Database_Project/style.css
@@ -5,7 +5,7 @@ h1 {
 }
 
 body {
-    background-image: url(SarahMcI425.github.io/Database_Project/dust_scratches.png) ;
+    background-image: url(dust_scratches.png) ;
     font-family: Arial, Helvetica, sans-serif;
 }
 
