--- a/Database_Project/style.css
+++ b/Database_Project/style.css
@@ -37,7 +37,7 @@ body {
   }
 
 .header{
-    background-color: blue;
+    background-color: #1C2957;
 }
 
 .column4 {
@@ -68,7 +68,7 @@ ul {
   }
   
   li a.active {
-    background-color: blue;
+    background-color: #1C2957;
     color: white;
   }
   
