--- a/Database_Project/style.css
+++ b/Database_Project/style.css
@@ -37,7 +37,7 @@ body {
   }
 
 .header{
-    background-color: #141B4D;
+    background-color: dark blue;
 }
 
 .column4 {
@@ -57,7 +57,7 @@ ul {
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: #191970;
+    background-color: dark blue;
   }
   
   li a {
